# rust-on-nails

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
crates/asset-pipeline/: package-lock.json  package.json
crates/axum-server/: Cargo.toml
crates/axum-server/src/: config.rs  errors.rs  main.rs
crates/db/: Cargo.toml  build.rs
crates/db/migrations/: 20231125060716_user_table.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/ui-components/src/: layout.rs  lib.rs  users.rs
documents/: 01-setting-up.md  02-the-database.md  03-web-development.md
